# gerrit-jira-hook

./: README.md  requirements.txt  setup.cfg
etc/: jira-hook.cfg
gerrit_jira_hook/: common.py
gerrit_jira_hook/cmd/: jira_update_ticket.py
