[metadata]
name = Gerrit jira hook
summary = Gerrit hook integrates Jira
author = liyingjun
author-email = liyingjun1988@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3

[entry_points]
console_scripts =
    jira-update-ticket = gerrit_jira_hook.cmd.jira_update_ticket:main
